--- a/arraysOperation.html
+++ b/arraysOperation.html
@@ -46,7 +46,12 @@
         let avg = sum / marksList.length;
         console.log(avg, "avg") // 65.5
 
-        
+        let items = [250, 645, 300, 900, 50];
+        for (i = 0; i < items.length; i++) {
+            let offer = items[i] / 10;
+            items[i] -= offer;
+        }
+        console.log('items', items);
 
     </script>
 </body>
