--- a/event.html
+++ b/event.html
@@ -8,11 +8,15 @@
 </head>
 
 <body>
+    <!-- The change in state of an object is known as event. -->
     <!-- most used event - click, onChange-->
+    <!-- mouse events, keyboard events, form events, print events, etc. -->
+    <!-- inline event means js code write in html, is not work when having same event write in js file -->
+     
     <button onClick="clickMe()">click</button>
 
     <input type="text" oninput="inputValue()">
-    
+
     <select name="" id="" onchange="dropdownValues()">
         <option value="">Pune</option>
         <option value="">Mumbai</option>
