--- a/callBack.html
+++ b/callBack.html
@@ -93,9 +93,23 @@
 
         // 
 
-        let promise = new Promise(() => {
-            console.log('promise learning')
-        })
+        // let promise = new Promise((resolve, reject) => {
+        //     console.log('promise learning');
+        //     resolve('promise completed!');
+        //     // reject('promise rejected!');
+        // })
+
+        function getInfo(data) {
+            return new Promise((resolve, reject) => {
+                setTimeout(() => {
+                    console.log('Promise data', data);
+                    // resolve('success!');
+                    reject('promise rejected!')
+                }, 5000)
+            })
+        }
+
+        getInfo('123')
 
 
     </script>
