--- a/async_Await.html
+++ b/async_Await.html
@@ -26,8 +26,10 @@
 
         async function testFuns() {
             await testFun();
-            // await testFun();
+            await testFun();
         }
+
+
     </script>
 
 </body>
