--- a/interviewQue.html
+++ b/interviewQue.html
@@ -13,6 +13,10 @@
         <li>super keyword</li>
         <li>method over-riding</li>
         <li>extends keyword</li>
+        <li>call back hell</li>
+        <li>Promises</li>
+        <li>async-await</li>
+        <li>iief</li>
     </ul>
 </body>
 
