--- a/datatype.html
+++ b/datatype.html
@@ -11,8 +11,11 @@
 <body>
     <script>
         // two types of data types 
+        // A data type defines the type of value a variable can hold.
         // 1. primitive data types - string, number, boolean, undefined, null, symbol
         // 2. reference/non-primitive data types - arrays, objects
+        // if we check the 'typeof' of all datatype then it return exact same as respective data type.
+        // except null datatype, it return datatype 'object'.
 
         var name = 'sayali';
 
