--- a/operators.html
+++ b/operators.html
@@ -9,6 +9,9 @@
 
 <body>
     <script>
+
+        // Operators in JavaScript are symbols used to perform operations on variables and values. They are classified into different categories based on their functionality.
+
         // arithmetic operators
 
         var num1 = 10;
@@ -26,34 +29,6 @@
         var division = num1 / num2;
         console.log("division", division);
 
-        // comparison operators
-
-        var compareNumber = num1 > num2;
-        console.log(compareNumber, 'compareNumber')
-
-        var compareNumberValueSame = num1 == num2;
-        console.log('compareNumberValueSame', compareNumberValueSame)
-
-        var compareNumberValueSameDatatype = num1 === num2;
-        console.log('compareNumberValueSameDatatype', compareNumberValueSameDatatype)
-
-        // logical or conditional operators
-
-        var name = 'sayali';
-        var name1 = 'sayali';
-
-        var city = 'kolhapur';
-        var city1 = 'kolhapur';
-
-        var checkNameCity = name == name1 && city == city1;
-        console.log('checkNameCity', checkNameCity)
-
-        var checkNameAndCity = name == name1 || city == city1;
-        console.log('checkNameAndCity', checkNameAndCity)
-
-        var checkNameCityValues = name == name1 ? 'both are the same value' : 'both are different value';
-        console.log('checkNameCityValues', checkNameCityValues)
-
         let digit = 1;
 
         // --, ++ digit , first increase value by 1
@@ -70,8 +45,36 @@
         digit--;
         console.log("digit--", digit);
 
-        // assignment 
 
+        // comparison operators///////
+
+        var compareNumber = num1 > num2;
+        console.log(compareNumber, 'compareNumber')
+
+        var compareNumberValueSame = num1 == num2;
+        console.log('compareNumberValueSame', compareNumberValueSame)
+
+        var compareNumberValueSameDatatype = num1 === num2;
+        console.log('compareNumberValueSameDatatype', compareNumberValueSameDatatype)
+
+        // logical or conditional operators
+        var name = 'sayali';
+        var name1 = 'sayali';
+
+        var city = 'kolhapur';
+        var city1 = 'kolhapur';
+
+        var checkNameCity = name == name1 && city == city1;
+        console.log('checkNameCity', checkNameCity)
+
+        var checkNameAndCity = name == name1 || city == city1;
+        console.log('checkNameAndCity', checkNameAndCity)
+
+        // Ternary (Conditional) Operator
+        var checkNameCityValues = name == name1 ? 'both are the same value' : 'both are different value';
+        console.log('checkNameCityValues', checkNameCityValues)
+
+        // assignment
         let numA = 10;
         let numB = 20;
 
