--- a/function.html
+++ b/function.html
@@ -49,7 +49,7 @@
         let finalResult = returnValueFun(10, 20);
         console.log('finalResult', finalResult);
 
-        // arrow function - compact way to write function
+        // arrow function - compact way to write function, line of code is reduced, readability is improved, execution is faster, function keyword is not used
 
         let mul = (a, b) => { console.log(a * b, "value of multiplication") };
         mul(10, 89);
