--- a/switch.html
+++ b/switch.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- in switch case inside the parameter of the switch need value which we compare in case. and that value need to mention in every case then according correct case it execute and give correct ans.-->
     <script>
         function getValue() {
             let getDay = +(document.getElementById('switchValue').value);
