--- a/theoryNotes.html
+++ b/theoryNotes.html
@@ -18,6 +18,9 @@
         <li>cookies formation</li>
         <li>Supports by all search engines.</li>
     </ol>
+
+    <p>string operation - value console, length, concat, slice, chartAt, object value access, trim, tolowercase,
+        toUpperCase, next line, tab, replace, replaceAll, </p>
 </body>
 
 </html>
