--- a/operators.html
+++ b/operators.html
@@ -10,9 +10,9 @@
 <body>
     <script>
 
-        // Operators in JavaScript are symbols used to perform operations on variables and values. They are classified into different categories based on their functionality.
+        // Operators in JavaScript are symbols used to perform operations on variables and values. They are classified into different categories based on their functionality.8 type of the operators are there in javascript.
 
-        // arithmetic operators
+        // 1. arithmetic operators
 
         var num1 = 10;
         var num2 = 20;
@@ -45,8 +45,27 @@
         digit--;
         console.log("digit--", digit);
 
+        // 2. assignment operators
+        let numA = 10;
+        let numB = 20;
 
-        // comparison operators///////
+        numA += 9;
+        //numA = numA + 9
+        console.log('num', numA) //19
+        numA -= 9;
+        console.log('num', numA) //1
+        numA *= 9;
+        console.log('num', numA) //90
+        numA /= 9;
+        console.log('num', numA) //1.
+        numA %= 9;
+        console.log('num', numA) //1.
+        numA **= 2;
+        console.log('num', numA) //40
+
+        console.log("number check", numA !== numB)
+
+        // 3. comparison operators///////
 
         var compareNumber = num1 > num2;
         console.log(compareNumber, 'compareNumber')
@@ -74,25 +93,95 @@
         var checkNameCityValues = name == name1 ? 'both are the same value' : 'both are different value';
         console.log('checkNameCityValues', checkNameCityValues)
 
-        // assignment
-        let numA = 10;
-        let numB = 20;
+        // 4. logical operators
 
-        numA += 9;
-        //numA = numA + 9
-        console.log('num', numA) //19
-        numA -= 9;
-        console.log('num', numA) //1
-        numA *= 9;
-        console.log('num', numA) //90
-        numA /= 9;
-        console.log('num', numA) //1.
-        numA %= 9;
-        console.log('num', numA) //1.
-        numA **= 2;
-        console.log('num', numA) //40
+        // 5. Bitwise Operators
 
-        console.log("number check", numA !== numB)
+        // 6. Ternary (Conditional) Operator
+        let age = 20;
+        let status = age >= 18 ? "Adult" : "Minor";
+        console.log(status); // Adult
+
+        //7. Type Operators
+        console.log(typeof 42); // "number"
+        console.log([] instanceof Array); // true
+
+        //    8. Spread & Rest Operators (...)
+        // Spread (...) – Expands an array/object into individual elements.
+        // copy of object, array. 
+        // concat/merge of object, array. 
+        // add object, array.
+
+        // Rest (...) – Collects remaining arguments into an array.
+
+        // Spread
+        let nums = [1, 2, 3];
+        console.log([...nums, 4, 5]); // [1, 2, 3, 4, 5]
+
+        // merging arrays
+        let MHCities = ['Sangli', 'Kolhapur', 'Satara'];
+        let MPCities = ['Indore', 'Bhopal', 'Gwalior'];
+        let IndianCities = [...MHCities, ...MPCities];
+        console.log('IndianCities', IndianCities);
+
+        // merge with new value add
+        let cities = [...MHCities, 'Panji', ...MPCities, 'Kerala'];
+        console.log('cities', cities);
+
+        // copy of array
+        let copyCities = [...IndianCities];
+        console.log('copyCities', copyCities);
+
+        // merge object
+        let person = { name: 'sayali', age: 20 };
+        let address = { city: 'kolhapur', state: 'MH' };
+        let personalDetails = { ...person, ...address };
+        console.log('personalDetails', personalDetails);
+
+        // merge with new value add
+        let customObj = { ...person, ...address, country: 'India' };
+        console.log('customObj', customObj);
+
+        // copy of object
+        let copyObj = { ...customObj };
+        console.log('copyObj', copyObj);
+
+        let myName = 'Sayali';
+        console.log('myName', myName.split(''))
+        console.log('myName', [...myName]);
+
+        let customNumber = '1234567890';
+        console.log('customNumber', Math.max(...customNumber));
+
+        function calculateDimension(height, width, depth) {
+            return height * width * depth;
+        }
+
+        let dimensionValues = [10, 90, 80]
+        console.log(calculateDimension(...dimensionValues))
+
+        console.log(calculateDimension.apply(null, dimensionValues))
+
+        // Rest
+        // function sum(...args) {
+        //     return args.reduce((acc, val) => acc + val, 0);
+        // }
+        // console.log(sum(1, 2, 3, 4)); // 10
+
+        // function multiplication(...args) {
+        //     return args.reduce((prev, curr) => prev * curr)
+        // }
+
+        // console.log(multiplication(26, 2))
+
+        function multiplication(...args) {
+            return args.reduce((prev, curr) => prev * curr);
+        }
+
+        console.log(multiplication(1, 5)); // Output: 5
+
+
+
     </script>
 </body>
 
