--- a/super.html
+++ b/super.html
@@ -35,6 +35,7 @@
         }
 
         let newEng = new Engineer('Sayali');
+        newEng.work(); // this will call the work method of child class and inside that we are calling the parent class method normalPerson using super keyword.
 
         // practice question
         // You are creating a website for your college. Create a class User with 2 properties, name & email. It also has a method called viewData( ) that allows user to view website data.
@@ -65,6 +66,32 @@
         this.stud1 = new User('sayali', 'sayali.pharne@bluebenz.com');
 
         this.admin = new Admin();
+
+        // 3
+
+        class Parent {
+            constructor(name) {
+                this.name = name;
+                console.log('name', name)
+            }
+
+            sample(name) {
+                console.log(name)
+            }
+        }
+
+        class child extends Parent {
+            constructor(name) {
+                super(name)
+            }
+            getData(name) {
+                super.sample(name)
+                console.log('name ' + name)
+            }
+        }
+
+        let gatherData = new child('Sayali')
+        gatherData.getData('Ruturaj')
 
     </script>
 </body>
