--- a/alert.html
+++ b/alert.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -15,6 +16,11 @@
         } else {
             console.log(val, "is not divisible by 5");
         }
+        /* comments
+        test*/
+        alert("I'm JavaScript!");
+
+        [1, 2, 3, 4, 5].forEach(alert);
     </script>
 </body>
 
